--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 DevOps_Curso/Datos_Plataformas_de_Estudios.txt
 DevOps_Practicas_Teoricas/Datos_Plataformas_de_Estudios.txt
+/Plataformas de estudio
